<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:title="@string/free_driver_drawer_home"/>
        <item
            android:id="@+id/nav_navigation"
            android:title="@string/free_driver_drawer_navigation"/>
        <item
            android:id="@+id/nav_feedback"
            android:title="@string/free_driver_drawer_support"/>
        <item
            android:id="@+id/nav_star"
            android:title="@string/free_driver_drawer_google_play_rate"/>
        <item
            android:id="@+id/nav_help"
            android:title="@string/free_driver_drawer_info"/>
        <item
            android:id="@+id/nav_logout"
            android:title="@string/free_driver_drawer_log_out"/>
    </group>
</menu>