<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_32dp"
        android:gravity="center_horizontal"
        android:text="@string/sheet_rating_stub_client_name"
        android:textAppearance="@style/M36Black"/>

    <RatingBar
        android:id="@+id/rating_bottom_sheet_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:theme="@style/RatingBarStyle"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="43dp"
        android:layout_marginRight="43dp"
        android:layout_marginTop="17dp"
        android:gravity="center"
        android:maxWidth="300dp"
        android:text="@string/sheet_rating_description"
        android:textAppearance="@style/R26Gray"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_32dp"
        android:text="@string/sheet_rating_stub_sum"
        android:textAppearance="@style/R74Black"/>

    <Button
        android:id="@+id/btn_bottom_sheet_rating_ready"
        style="@style/Widget.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_32dp"
        android:enabled="false"
        android:text="@string/sheet_rating_finish_button_title"
    />
</LinearLayout>