<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_32dp"
            android:text="@string/stats_date_title"
            android:textAppearance="@style/R26Black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_32dp"
            android:text="@string/stats_stub_sum"
            android:textAppearance="@style/R82Black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_32dp"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stats_stub_orders_count"
                    android:textAppearance="@style/R48Black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_9dp"
                    android:text="@string/stats_orders_count_title"
                    android:textAppearance="@style/R24Gray"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stats_stub_orders_time"
                    android:textAppearance="@style/R48Black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_9dp"
                    android:text="@string/stats_orders_time_title"
                    android:textAppearance="@style/R24Gray"/>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="?android:attr/dividerHeight"
            android:layout_marginTop="@dimen/dimen_32dp"
            android:background="@color/dividerColor"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_32dp"
            android:text="@string/stats_all_orders_rating_title"
            android:textAppearance="@style/R26Black"/>

        <com.github.lzyzsd.circleprogress.DonutProgress
            android:id="@+id/donut_progress"
            android:layout_width="@dimen/dimen_120dp"
            android:layout_height="@dimen/dimen_120dp"
            android:layout_marginTop="@dimen/dimen_32dp"
            custom:donut_finished_color="?attr/colorAccent"
            custom:donut_finished_stroke_width="@dimen/dimen_9dp"
            custom:donut_max="100"
            custom:donut_prefix_text="3"
            custom:donut_progress="24"
            custom:donut_suffix_text="2"
            custom:donut_text="24%"
            custom:donut_text_color="#fff"
            custom:donut_text_size="@dimen/dimen_28sp"
            custom:donut_unfinished_color="@color/yellowish_light"
            custom:donut_unfinished_stroke_width="@dimen/dimen_9dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_32dp"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:text="@string/stats_percent_inner_orders_title"
            android:textAppearance="@style/R24Gray"/>
    </LinearLayout>
</ScrollView>