<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp">

    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="-8dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:fontFamily="sans-serif-black"
        android:textColor="#ffffff"
        android:textSize="36sp"
        tools:text="@string/onboarding_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="normal"
        tools:text="@string/onboarding_description" />

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/button_onboarding_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/background_button"
        android:backgroundTint="@color/colorAccent"
        android:foreground="?selectableItemBackground"
        android:text="@string/onboarding_sign_up"
        android:textAllCaps="false"
        android:textColor="#2f445d" />

    <Button
        android:id="@+id/button_onboarding_log_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_button"
        android:backgroundTint="#fff"
        android:foreground="?selectableItemBackground"
        android:text="@string/onboarding_log_in"
        android:textAllCaps="false"
        android:textColor="#2f445d" />
</LinearLayout>