<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="16dp"
    android:background="@drawable/bg_popup"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_popup_pic"
        android:layout_width="168dp"
        android:layout_height="168dp"
        android:layout_marginTop="40dp"
        android:tint="@color/colorAccent"
        app:srcCompat="@drawable/ic_logo"/>

    <TextView
        android:id="@+id/tv_popup_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/popup_arrived_question"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:background="#d5d9de"/>

    <TextView
        android:id="@+id/tv_popup_positive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:minHeight="56dp"
        android:text="@string/all_arrived"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textStyle="normal"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#d5d9de"/>

    <TextView
        android:id="@+id/tv_popup_negative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:selectableItemBackground"
        android:gravity="center"
        android:minHeight="56dp"
        android:text="@string/all_cancel"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textStyle="normal"/>
</LinearLayout>