<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="0dp"
            app:elevation="0dp">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:title="@string/phone_number_log_in" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@drawable/gd_toolbar_dropshadow" />
        </android.support.design.widget.AppBarLayout>

        <EditText
            android:id="@+id/edittext_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/phone_number_your_phone_number"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:maxLines="1"
            android:textColorHint="#abb4be"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="@string/phone_number_description"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textSize="12sp" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/layout_phone_number_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.7"
        android:background="#2a3d53"
        android:clickable="true"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="#97a1ae" />
    </FrameLayout>
</FrameLayout>